# cpp-setting-out-and-adding-packages-with-vcpkg

./: CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  cmake_install.cmake  main  main.cpp
include/: name.h  name_gen.h
